# mask_detection_ia_ufes_cv

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/camera/: Camera.cpp  Camera.hpp
src/object_detection/: ObjectDetection.cpp  ObjectDetection.hpp
src/utils/: utils.cpp  utils.h
